Fixed alignment for "Favorite Hobbies" <ul> on /single-team.php

--- a/assets/sass/_layout.scss
+++ b/assets/sass/_layout.scss
@@ -152,6 +152,10 @@
 		.all-caps {
 			color: $grey;
 		}
+
+		ul {
+			padding: 0 0 0 16px;
+		}
 	}
 }
 
